Current

Fixed: Commands with same prefix as options were not working properly.

1.23
2012/01/12

Added: @DynamicParameter
Fixed: Use JDK 6 Console() when available to improve support of non ascii chars (Julien Henry)

1.20
2011/11/24

Added: Support for delegating parameter definitions to child classes (rodionmoiseev)
Added: @Parameter(commandNames) so that command names can be specified with annotations
Added: Support for enums (Adrian Muraru)
Fixed: Throw if an unknown option is found
Fixed: Main parameters are now validated as well (Connor Mullen)

1.19
2011/10/10

Added: commandDescriptionKey to @Parameters, to allow internationalized command descriptions
Added: JCommander#setParameterDescriptionComparator for better control over usage()
Fixed: Fields of type Set (HashSet and SortedSet) are now supported
Fixed: defaults for commands were not properly applied (Stevo Slavic)
Fixed: "-args=a=b,b=c" was not being parsed correctly (Michael Lancaster)
Fixed: GITHUB-73: descriptionKey was being ignored on main parameters

1.18
2011/07/20

Added: Default converter factories can be overridden (Scott Clasen)
Added: IParameterValidator
Added: Don't display "Options:" if none were defined
Added: Enforce that the type of the main parameter is a List
Added: usage() now displays the options for each command as well
Fixed: Default values with a validator were being validate at parse() time instead of creation time.
Fixed: Exception when using an @ file with empty lines between options
Fixed: OOM when parsing certain descriptions with long URL's in them

1.15
2011/01/24

Added: Added a constructor that takes a Bundle only, https://github.com/cbeust/jcommander/pull/47 (Russell Egan)
Fixed: NPE with calling getCommandDescription() of an unknown command

1.13
2010/12/15

Added: Boolean parameters with arity 0 (e.g. "foo -debug")
Fixed: JCommander would sometimes just print a stack trace and continue, now rethrowing.

1.7
2010/09/06
